--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table>
       <tr>
         <td><h1>Tanaya Gavande</h1></td>
-        <td><img src="D:\Tanaya G\Courses\Web Development\Web\WebD\HTML Personal Site\images\Tanaya_Gavande.png"
+        <td><img src="images\Tanaya_Gavande.png"
         alt="Image of Tanaya Gavande"></td>
       </tr>
     </table>
