--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <table>
       <tr>
-        <td><h1>Tanaya Gavande</h1></td>
-        <td><img src="images\Tanaya_Gavande.png"
+        <td><img src="images/Tanaya_Gavande.png"
         alt="Image of Tanaya Gavande"></td>
+        <td><h1>Tanaya Gavande</h1></td>
       </tr>
     </table>
     <p><em>Web developer and <b>Data Science</b> enthusiast</em></p>
